At a good stopping point. It works, ish. There's a slight jump from left to right on the transition between absolute and fixed position. I'd like to work on a backend / admin area to administer different versions of the waypoint826 table of contents. I'd like to test it on a portfolio page, I'll have to set up since the links to the portfolio pages are broken. Long day, but got a lot accomplished

--- a/css/waypoint-style.css
+++ b/css/waypoint-style.css
@@ -11,10 +11,14 @@
 *
 */
 
+html {
+    scroll-behavior: smooth;
+}
+
 .waypoint826-main {
 
 	
-	width: 300px;
+	width: 250px;
 	background-color:none;
 	border-right: 1px solid #ccc;
 	position: absolute;
@@ -33,9 +37,11 @@ ol.list-wrapper {
 	font-family: 'League Spartan';
 }
 
-.waypoint826-main ol li {}
+.waypoint826-main ol li.active::marker {}
 
-.waypoint826-main ol li.active a {
+
+.waypoint826-main ol li.active a, 
+.waypoint826-main ol li.active::marker {
 	font-weight: 600;
 	color: #555555!important;
 }
@@ -53,6 +59,8 @@ ol.list-wrapper {
 
 #waypoint826-primary-container.stick {
 	position: fixed;
+	/* right: calc(100% - 10px); /* Adjusting the left position by 10px */
+	width: 250px;
 	top: 0!important;
 }
 
